* CHANGES IN dplR VERSION 1.6.0

File: TODO
-------------------------
- Added a TODO list that follows the todo.ell format.

File: NAMESPACE
-------------------------
- Added chron.plot to export list.
- Added interseries.cor to export list.
- Added plot.rwl as an S3Method.
- Added plot.crn as an S3Method.
- Added summary.rwl as an S3Method.

File: crn.plot.R
-------------------------
- Added several new plotting options to give users more control of plot
- Aliased crn.plot to plot.crn so it can be used as an S3 plot method.
  Thus a user can now to bar <- chon(foo); plot(bar) 
- Help revised considerably


File: read.crn.R
-------------------------
- Added class "crn" to output object.

File: cana157.rda
-------------------------
- Added class "crn" to object.

File: detrend.R and detrend.series.R
------------
- Added an Ar detrend method. Revised plotting in detrend.series
- Added a verbose option to print out parameters used in detrending
- Added a return.info option to write a list of parameters used in detrending

File: powt.R
------------
- Originally, the transformed series were rescaled to their
  original mean and variance, which can lead to negative values for
  the (supposedly) raw tree-ring data.  This is not necessary, and
  has been removed now.

File: rwl.stats
-------------------------
- Added an S3 summary method for rwl objects so that summary(foo.rwl)
  calls rwl.stats(foo.rwl)

Folder: vignettes
-------------------------
- Added a vignettes folder

File: dplR.sty
-------------------------
- Very basic sty file

File: intro-dplR.Rnw
-------------------------
- A vignette to intriduce dplR

File: corr.series.seg.R
--------------------
- Added method argument to specify method for cor.test(). Defauts to
  "spearman."

File: corr.rwl.seg.R
--------------------
- Removed yr.range() function in favor of yr.range() in helpers.R.
  They are identical for all practical purposes.
- Added method argument to specify method for cor.test(). Defauts to